--- a/index.html
+++ b/index.html
@@ -1,34 +1,157 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Channels Television - The Latest from Nigeria and Around the World</title>
-    <link rel="stylesheet" href="../channels_tv/index.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Channels Television - The Latest from Nigeria and Around the
+            World</title>
+        <link rel="stylesheet" href="../channels_tv/index.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    </head>
 
-<body>
-    <header class="header">
-        <div class="header-content">
-            <nav>
-                <ul class="header-nav">
-                    <li><a href="https://www.channelstv.com/live" target="_blank">Live TV</a></li>
-                    <li><a href="https://www.channelstv.com/election/nigerian-elections-2023/" target="_blank">2023 Elections</a></li>
-                    <li><a href="https://www.channelstv.com/category/politics/" target="_blank">Politics</a></li>
-                    <li><a href="https://www.channelstv.com/category/business/" target="_blank">Business</a></li>
-                    <li><a href="https://www.channelstv.com/category/world-news/" target="_blank">World</a></li>
-                    <li><a href="https://www.channelstv.com/category/sports/" target="_blank">Sports</a></li>
-                    <li><a href="https://www.channelstv.com/category/entertainment/" target="_blank">Entertainment</a></li>
-                    <li><a href="https://www.channelstv.com/category/opinion/" target="_blank">Opinion</a></li>
-                    <li><a href="https://www.channelstv.com/podcasts" target="_blank">Podcast</a></li>
-                    <li><a href="https://www.channelstv.com/category/crime-watch/" target="_blank">Crime</a></li>
-                    <li><a href="https://www.channelstv.com/programmes/" target="_blank">Programmes</a></li>
-                    <li><a href="#">More</a></li>
-                </ul>
-            </nav>
-            <a href="#"><img src="https://upload.wikimedia.org/wikipedia/en/7/76/Channels_TV.jpg" alt="Channels TV"></a>
+    <body>
+        <header class="header">
+            <div class="header-content">
+                <nav>
+                    <ul class="header-nav">
+                        <li><a href="https://www.channelstv.com/live"
+                                target="_blank">Live TV</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/election/nigerian-elections-2023/"
+                                target="_blank">2023 Elections</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/politics/"
+                                target="_blank">Politics</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/business/"
+                                target="_blank">Business</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/world-news/"
+                                target="_blank">World</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/sports/"
+                                target="_blank">Sports</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/entertainment/"
+                                target="_blank">Entertainment</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/opinion/"
+                                target="_blank">Opinion</a></li>
+                        <li><a href="https://www.channelstv.com/podcasts"
+                                target="_blank">Podcast</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/crime-watch/"
+                                target="_blank">Crime</a></li>
+                        <li><a href="https://www.channelstv.com/programmes/"
+                                target="_blank">Programmes</a></li>
+                        <li><a href="#">More</a></li>
+                    </ul>
+                </nav>
+                <a href="#"><img
+                        src="https://upload.wikimedia.org/wikipedia/en/7/76/Channels_TV.jpg"
+                        alt="Channels TV"></a>
+            </div>
+        </header>
+        <div class="content">
+            <div class="top bar">
+
+            </div>
+            <div class="labels-container">
+                <div class="labels">
+                    <div class="dont-miss">
+                        <h2>Don't Miss</h2>
+                    </div>
+                    <div class="trending-videos">
+                        <h2>Trending Videos</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="trending bar">
+
+            </div>
+            <div class="features bar">
+
+            </div>
         </div>
-    </header>
-</body>
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-top">
+                    <ul class="social-links">
+                        <li><a
+                                href="https://www.instagram.com/channelstelevision/"
+                                target="_blank"><i class="fa fa-instagram"
+                                    aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.facebook.com/channelsforum"
+                                target="_blank"><i class="fa fa-facebook-square"
+                                    aria-hidden="true"></i></a></li>
+                        <li><a href="https://twitter.com/channelstv"
+                                target="_blank"><i class="fa fa-twitter"
+                                    aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.youtube.com/channelsweb"
+                                target="_blank"><i class="fa fa-youtube-play"
+                                    aria-hidden="true"></i></a></li>
+                        <li><a
+                                href="https://www.instagram.com/channelstelevision/"
+                                target="_blank"><i class="bi bi-tiktok"
+                                    aria-hidden="true"></i></a></li>
+                    </ul>
+                    <a href="#"><img
+                            src="https://upload.wikimedia.org/wikipedia/en/7/76/Channels_TV.jpg"
+                            alt="Channels TV"></a>
+                </div>
+                <div class="other-links">
+                    <ul>
+                        <li>Sections</li>
+                        <li><a
+                                href="https://www.channelstv.com/category/headlines/"
+                                target="_blank"> Headlines</a></li>
+                        <li><a href="https://www.channelstv.com/category/local/"
+                                target="_blank"> Locals</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/category/politics/"
+                                target="_blank"> Politics</a></li>
+                    </ul>
+                    <ul>
+                        <li>Programmes</li>
+                        <li><a
+                                href="https://www.channelstv.com/programmes/sunrise-daily/"
+                                target="_blank"> Sunrise Daily</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/programmes/sunrise/"
+                                target="_blank"> Sunrise</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/programmes/business-morning/"
+                                target="_blank"> Business Morning</a></li>
+                    </ul>
+                    <ul>
+                        <li> Live TV</li>
+                        <li><a href="https://channelstv.com/live"
+                                target="_blank">PC & Mac</a></li>
+                        <li><a href="https://channelstv.com/live"
+                                target="_blank"> iPad & iPhone</a></li>
+                        <li><a href="https://channelstv.com/live"
+                                target="_blank"> Android</a></li>
+                    </ul>
+                    <ul>
+                        <li>About Us</li>
+                        <li><a href="https://www.channelstv.com/aboutus/"
+                                target="_blank"> About Channels Television</a></li>
+                        <li><a href="https://www.channelstv.com/meet-the-team/"
+                                target="_blank"> Meet The team</a></li>
+                        <li><a
+                                href="https://www.channelstv.com/meet-the-team/executives/"
+                                target="_blank"> Executive management</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <p>© 2023 Channels Incorporated Limited. All rights
+                        reserved.</p>
+                </div>
+            </div>
+        </footer>
+    </body>
 
 </html>
