change class name & set hover/active color on footer links

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             src="https://upload.wikimedia.org/wikipedia/en/7/76/Channels_TV.jpg"
                             alt="Channels TV"></a>
                 </div>
-                <div class="other-links">
+                <div class="footer-links">
                     <ul>
                         <li>Sections</li>
                         <li><a
